sass/main.scss
$pink-200: #f5b2c8;
$pink-400: #c35;
$pink-500: #ff1c76;

$blue-300: #9fd6fa;
$blue-500: #234;
$blue-800: #141f2b;

$grey-100: #ddd;
$grey-200: #fafafa;
$grey-300: #b9b9b9;
$grey-400: #555;
$grey-500: #111;

/* Tiny reset */

html,
body,
div,
form,
fieldset,
legend,
label,
h1,
h2 {
  margin: 0;
  padding: 0;
}

/* Style */

html,
body {
  height: 100%;
}

body {
  font-family: Georgia, Times, serif;
  font-size: 120%;
  line-height: 1.58;
  border-top: 0.5em solid $pink-400;
}

.container {
  display: flex;
  flex-direction: column;
  margin: 0px auto;
  margin-top: 70px;
}

header {
  font-size: 0.8em;
  text-align: center;
}

.logo {
  width: 175px;
  height: 153px;
  margin: auto;
}

.bio {
  width: 210px;
  margin: auto;
  padding: 16px;
}

main {
  padding: 20px;
  margin-bottom: 50px;
  max-width: 650px;
}

figure a {
  border: none;
}

figure a:hover {
  border: none;
}

.logo a,
nav a,
nav a:hover {
  border-bottom: none;
}

main article {
  margin-bottom: 44px;
}

main img {
  max-width: 100%;
}

main video {
  max-width: 100%;
}

.homepage h1 {
  font-size: 130%;
}

@media screen and (max-width: 640px) {
  body {
    font-size: 110%;
  }
}

@media screen and (min-width: 800px) {
  .container {
    flex-direction: row;
    justify-content: center;
  }

  main {
    padding: 0px 30px;
    margin-left: 30px;
  }
}

h1,
h2,
h3,
h4,
h5,
h6,
th,
td,
caption {
  font-weight: 400;
}

.post-meta {
  font-style: italic;
  margin: 0px;
  font-size: 90%;
}

.homepage .post-meta {
  font-size: 80%;
}

code {
  background: $grey-200;
  border-radius: 6px;
  display: inline-block;
  font-family: "Courier New", "Courier", monospace;
  -moz-font-feature-settings: "liga" off;
  font-feature-settings: "liga" off;
  font-size: 16px;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: subpixel-antialiased;
  max-width: 100%;
  overflow-x: auto;
  padding: 0 5px;
  vertical-align: middle;
  word-wrap: normal;
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.125);
}

blockquote {
  border-left: 4px solid $blue-300;
  font-style: italic;
  margin: 4px 10px;
  padding: 3px 20px;
}

pre {
  padding: 10px;
  border-radius: 6px;
  overflow-x: auto;
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.125);
}

h1 {
  font-size: 1.87em;
  margin-bottom: 8px;
}

h2 {
  font-size: 1.2em;
}

h3 {
  margin-top: 0px;
  font-style: italic;
}

::selection {
  background: black;
  color: white;
}

a {
  color: $pink-400;
  text-decoration: none;
  border-bottom: 1px dashed $pink-400;
}

a:hover {
  border-bottom: 2px solid $pink-400;
}

header nav ul {
  display: inline-block;
  padding-left: 0px;
}

header nav li {
  list-style: none;
  display: inline;
}

.icon {
  height: 24px;
  width: 24px;
  opacity: 0.4;
  float: left;
  margin: 5px;
  background-repeat: no-repeat;
}

.icon:hover {
  opacity: 1;
  transition: opacity 200ms ease-in;
}

.button {
  background-color: $pink-400;
  padding: 10px;
  color: white;
}

figure {
  font-size: 0.9em;
  font-style: italic;
  margin: 40px 0 40px;
  padding: 0;
  text-align: center;
  text-indent: 0;
}

figure img {
  width: 100%;
}

figcaption {
  margin-top: 10px;
}

.comments {
  list-style: none;
  display: inline;
}

#teaser {
  background: $pink-400;
  color: $pink-200;
}

#teaser a {
  color: white;
}

#teaser a::after {
  content: "\a0»";
}

footer {
  background: $blue-500;
  color: $grey-300;
}

#teaser,
footer {
  display: flex;
  justify-content: center;
}

#teaser .body,
footer .body {
  max-width: 800px;
  margin: 40px auto;
  padding: 20px;
}

.email {
  background-color: white;
}

.submit {
  background-color: $grey-300;
}

footer .field {
  padding: 10px;
  font-size: 0.8em;
  border: none;
}

.autocomplete {
  position: relative;
  display: inline-block;
}

.autocomplete input {
  border: 1px solid $grey-100;
  padding: 10px 20px;
  border-radius: 20px;
  width: 150px;
  font-size: 0.9em;
  box-shadow: 0 1px 0px rgba(255, 255, 255, 0.25);
}

input[type="submit"] {
  cursor: pointer;
}

input:focus::placeholder {
  color: transparent;
}

.autocomplete-items {
  position: absolute;
  left: 0;
  top: 38px;
  font-size: 0.9em;
  line-height: 1.5;
  width: 100%;
}

.autocomplete-items div {
  padding: 10px;
  cursor: pointer;
  background-color: white;
  border: 1px solid $grey-100;
}

.autocomplete-items div:hover,
.autocomplete-active {
  background-color: $pink-400 !important;
  color: white;
}

@media screen and (max-width: 800px) {
  .autocomplete {
    width: 100%;
    font-size: 1.1em;
  }

  .autocomplete input {
    width: calc(100% - 100px);
    margin: 20px 10px;
  }

  .autocomplete-items {
    top: 58px;
  }
}

.tldr {
  padding: 65px 20px 20px 20px;
  margin: 30px 0;
  background-color: lightyellow;
  border: 4px solid peachpuff;
  position: relative;
}

.tldr:after {
  content: "Summary";
  position: absolute;
  top: 0;
  left: 0;
  font-size: 1.3em;
  color: grey;
  padding: 15px 20px;
}

@media (prefers-color-scheme: light) {
  .logo_dark {
    display: none;
  }
}

@media (prefers-color-scheme: dark) {
  .logo_light {
    display: none;
  }
}

@media (prefers-color-scheme: dark) {
  body {
    background: $blue-500;
    color: white;
    border-top: 0.5em solid $pink-500;
  }

  .bio,
  .post-meta {
    color: $grey-300;
  }

  a {
    color: $pink-500;
    border-bottom: 1px dashed $pink-500;
  }

  a:hover {
    border-bottom: 2px solid $pink-500;
  }

  .icon {
    filter: brightness(0) invert(1);
    opacity: 1;
  }

  main img {
    background-color: white;
    border-radius: 6px;
  }

  code {
    background-color: $grey-500;
  }

  pre {
    background-color: #fff;
    -webkit-filter: invert(100%);
    filter: invert(100%);
  }

  .tldr {
    background: $blue-800;
    border-color: $grey-400;
  }

  .autocomplete input,
  .autocomplete-items div {
    border: 0;
    background: $blue-800;
    color: white;
  }

  footer {
    background: $blue-800;
  }
}

